[package]
name = "kurtbuilds_std_ext"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Standard library extensions"
repository = "https://github.com/kurtbuilds/std_ext"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "std_ext"

[dependencies]
